Fix article view on smaller screens.

--- a/src/assets/style-v18.css
+++ b/src/assets/style-v18.css
@@ -285,9 +285,13 @@ li::before {
   }
 }
 
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 1040px) {
   .grid {
     max-width: 100%;
+  }
+  .span-2 {
+    grid-column: 1 / -1;
+    max-width: 740px;
   }
 }
 
